--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -10,12 +10,47 @@ on:
 
 jobs:
   build:
-    name: ${{matrix.os}} / ${{matrix.configuration}}
-    runs-on: ${{matrix.os}}
+    name: ${{matrix.config.name}}
+    runs-on: ${{matrix.config.os}}
     strategy:
       matrix:
-        configuration: [ Debug, Release ]
-        os: [ windows-latest, ubuntu-latest ]
+        config:
+          - name: "Windows MSVC Debug"
+            os: windows-latest
+            configuration: Debug
+            cxx: "cl"
+            generators: "Visual Studio 17 2022"
+            config-folder: Debug
+          - name: "Windows MSVC Release"
+            os: windows-latest
+            configuration: Release
+            cxx: "cl"
+            generators: "Visual Studio 17 2022"
+            config-folder: Release
+          - name: "Linux GCC Debug"
+            os: ubuntu-latest
+            configuration: Debug
+            cxx: "g++"
+            generators: "Unix Makefiles"
+            config-folder: ""
+          - name: "Linux GCC Release"
+            os: ubuntu-latest
+            configuration: Release
+            cxx: "g++"
+            generators: "Unix Makefiles"
+            config-folder: ""
+          - name: "Linux Clang Debug"
+            os: ubuntu-latest
+            configuration: Debug
+            cxx: "clang++"
+            generators: "Unix Makefiles"
+            config-folder: ""
+          - name: "Linux Clang Release"
+            os: ubuntu-latest
+            configuration: Release
+            cxx: "clang++"
+            generators: "Unix Makefiles"
+            config-folder: ""
 
     steps:
     - name: ⬇️  Checkout source
@@ -26,8 +61,12 @@ jobs:
       with:
         dotnet-version: '8.0.x'     # Pin to the major version you target
 
-    - name: 📦  Restore dependencies
-      run: dotnet restore
+    - name: 📦  Generate build files
+      run: cmake -B ${{github.workspace}}/cpp-build -G "${{matrix.config.generators}}" -DCMAKE_BUILD_TYPE=${{matrix.config.configuration}}
 
-    - name: 🔨  Build – ${{ matrix.configuration }}
-      run: dotnet build --configuration ${{ matrix.configuration }} --no-restore
+    - name: 🔨  Build – ${{ matrix.config.configuration }}
+      run: cmake --build ${{github.workspace}}/cpp-build --config ${{matrix.config.configuration}}
+
+    - name: Run Test
+      working-directory: ${{github.workspace}}/cpp-build/${{matrix.config.config-folder}}
+      run: ./test-cpp-project
