Update enum template
From now on we collect all enum  generated code and then replace it in main reflection template. Standardized names that are to replaced in template.

--- a/reflection-header.template
+++ b/reflection-header.template
@@ -1,11 +1,19 @@
 ﻿#pragma once
 
+#include <cstring>
+
+__refl_includes__
+
 namespace Obs
 {
+
 template <typename T>
 struct Enum
 {
     static_assert(false, "Enum type does not have reflection data!");
 };
+
+__refl_enum__
+
 } // namespace Obs
 
