--- a/enum.template
+++ b/enum.template
@@ -7,6 +7,7 @@ struct Enum<__enum_full_name__>
 
     static const char* GetFullEnumName() { return "__enum_full_name__"; }
     static const char* GetEnumName() { return "__enum_name__"; }
+    static const char* GetDescription() { return "__enum_comment__"; }
 
     static UnderlyingType GetUnderlyingValue(EnumType enum_value)
     {
