Add support for giving description to the enum entries
One limitation is that if two consecutive enum values have exactly the same comment, the second one will not be shown. This is to fix much bigger issue where comment will fall through to other enums beneath it if they don't have a comment attached.

--- a/enum.template
+++ b/enum.template
@@ -9,6 +9,15 @@ struct Enum<__enum_full_name__>
     static const char* GetEnumName() { return "__enum_name__"; }
     static const char* GetDescription() { return "__enum_comment__"; }
 
+    static const char* GetValueDescription(EnumType enum_value)
+    {
+        switch (enum_value)
+        {
+__enum_value_to_description_switch__
+            default: return nullptr;
+        }
+    }
+
     static UnderlyingType GetUnderlyingValue(EnumType enum_value)
     {
         return static_cast<UnderlyingType>(enum_value);
