--- a/reflection-header.template
+++ b/reflection-header.template
@@ -93,17 +93,9 @@ private:
 
 enum class Type
 {
-    int8,
-    int16,
-    int32,
-    int64,
-    uint8,
-    uint16,
-    uint32,
-    uint64,
-    float32,
-    float64,
-    enum_type
+    POD,
+    Pointer,
+    String
 };
 
 struct Property
