Add run-time class reflection
Refactor a bit template files.

--- a/reflection-header.template
+++ b/reflection-header.template
@@ -11,6 +11,8 @@ __refl_includes__
 namespace Obs
 {
 
+#pragma region Compile-Time Enum Reflection
+
 template <typename T>
 struct Enum
 {
@@ -19,78 +21,29 @@ struct Enum
 
 __refl_enum__
 
-struct EnumCollection
+#pragma endregion
+
+struct EnumItem
 {
-    struct EnumItem
-    {
-        const char* name = "";
-        const char* description = "";
-        uint64_t value = 0xFFFFFFFFFFFFFFFF;
-    };
-
-    struct EnumEntry
-    {
-        const char* name;
-        const char* full_name;
-        const char* description;
-        int underlying_type_size;
-        std::vector<EnumItem> items;
-    };
-
-    std::vector<EnumEntry> entries;
-    EnumEntry default_entry;
-
-    static EnumCollection& Get()
-    {
-        static EnumCollection enum_iterator;
-        return enum_iterator;
-    }
-
-    EnumCollection() : entries
-        {
-__refl_enum_collection_entries__
-        }
-    {
-    }
-
-    EnumEntry& GetEnumEntry(const char* name)
-    {
-        for (EnumEntry& entry : entries)
-        {
-            if (strcmp(entry.name, name) == 0)
-            {
-                return entry;
-            }
-        }
-        assert(false && "Enum by that name not found!");
-        return default_entry;
-    }
-
-    void GetValue(void* dst, const char* enum_name, const char* item_name)
-    {
-        EnumCollection& enum_iterator = Get();
-        for (EnumEntry& enum_entry : enum_iterator.entries)
-        {
-            if (strcmp(enum_entry.name, enum_name) == 0)
-            {
-                for (EnumItem& item : enum_entry.items)
-                {
-                    if (strcmp(item.name, item_name) == 0)
-                    {
-                        Write(dst, item, enum_entry.underlying_type_size);
-                    }
-                }
-                break;
-            }
-        }
-    }
-
-private:
-    static void Write(void* dst, const EnumItem& item, int item_size)
-    {
-        memcpy(dst, reinterpret_cast<const void*>(&item.value), item_size);
-    }
+    const char* name = "";
+    const char* description = "";
+    uint64_t value = 0xFFFFFFFFFFFFFFFF;
 };
+
+struct EnumEntry
+{
+    const char* name = "";
+    const char* full_name = "";
+    const char* description = "";
+    int underlying_type_size = 0;
+    std::vector<EnumItem> items;
+};
+
+#pragma region Run-Time Enum Reflection
+
+__refl_enum_collection__
+
+#pragma endregion
 
 enum class Type
 {
@@ -102,11 +55,24 @@ enum class Type
 struct Property
 {
     const char* name;
+    const char* description;
     const char* type_name;
     Type type_enum;
     int offset;
     int size;
 };
+
+struct ClassEntry
+{
+    const char* name;
+    const char* scope;
+    const char* scoped_name;
+    const char* description;
+
+    std::vector<Property> properties;
+};
+
+#pragma region Compile-Time Class Reflection
 
 template <typename T>
 struct Class
@@ -115,6 +81,14 @@ struct Class
 };
 
 __refl_class__
+
+#pragma endregion
+
+#pragma region Run-Time Class Reflection
+
+__refl_class_collection__
+
+#pragma endregion
 
 } // namespace Obs
 
