Add main cmake file as well as main cpp file for obsidian app

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,30 @@
 cmake_minimum_required(VERSION 3.28)
-project(TestCppProject VERSION 1.0.0 LANGUAGES CXX)
+project(OBSIDIAN VERSION 0.1.0 LANGUAGES CXX)
+
+option(OBS_LLVM_PATH "Root path where LLVM binaries and libraries are installed" "")
+message(STATUS "OBS_LLVM_PATH: ${OBS_LLVM_PATH}")
+option(OBS_HARDENING "Enable hardening options" ON)
+message(STATUS "OBS_HARDENING: ${OBS_HARDENING}")
+
+if (NOT OBS_LLVM_PATH)
+    message(FATAL_ERROR "LLVM root path not specified. Please specify the path like this: -DOBS_LLVM_PATH=<path-to-llvm>...")
+endif ()
+
+if (NOT EXISTS "${OBS_LLVM_PATH}")
+    message(FATAL_ERROR "OBS_LLVM_PATH does not exist: ${OBS_LLVM_PATH}!")
+endif ()
+
+if (NOT EXISTS "${OBS_LLVM_PATH}/bin")
+    message(FATAL_ERROR "LLVM binary path does not exist!")
+endif()
+
+if (NOT EXISTS "${OBS_LLVM_PATH}/lib")
+    message(FATAL_ERROR "LLVM library path does not exist!")
+endif()
+
+if (NOT EXISTS "${OBS_LLVM_PATH}/include")
+    message(FATAL_ERROR "LLVM include path does not exist!")
+endif()
 
 # Don't use C++ 20 modules
 set(CMAKE_CXX_SCAN_FOR_MODULES 0)
@@ -10,45 +35,39 @@ if (NOT DEFINED CMAKE_CXX_VISIBILITY_PRESET AND NOT DEFINED CMAKE_VISIBILITY_INL
     set(CMAKE_VISIBILITY_INLINES_HIDDEN YES)
 endif ()
 
-include(test-cpp/compiler-warnings.cmake)
-include(test-cpp/compiler-options.cmake)
-add_library(warnings INTERFACE)
-add_library(options INTERFACE)
-setup_compiler_warnings(warnings)
-setup_compiler_options(options)
+# Configure desired compilation options and warnings
+include(cmake/compiler-warnings.cmake)
+include(cmake/compiler-options.cmake)
+add_library(obs_warnings INTERFACE)
+add_library(obs_options INTERFACE)
+setup_compiler_warnings(obs_warnings)
+setup_compiler_options(obs_options)
 
-set(SYSTEM_INCLUDE_DIRS_ARG ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
+if (OBS_HARDENING)
+    include(cmake/sanitizers.cmake)
+    setup_sanitizers(obs_options)
+endif ()
 
-if (NOT SYSTEM_INCLUDE_DIRS_ARG)
-    set(SYSTEM_INCLUDE_DIRS_ARG "")
-else ()
-    set (SYSTEM_INCLUDE_DIRS_ARG --include-system-folders=${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
-endif()
-
-add_custom_target(
-        generate_reflection
-        COMMAND ${CMAKE_COMMAND} -E echo "Building obsidian..."
-        COMMAND dotnet restore
-        COMMAND dotnet build obsidian.csproj --no-restore /p:Configuration=$<CONFIG> -o ${CMAKE_CURRENT_SOURCE_DIR}/bin/$<CONFIG>
-        COMMAND ${CMAKE_COMMAND} -E echo "Running obsidian..."
-        COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/bin/$<CONFIG>/obsidian
-            --search-path=${CMAKE_CURRENT_SOURCE_DIR}/test-cpp/include
-            --destination-path=${CMAKE_CURRENT_BINARY_DIR}/include
-            --include-folders=${CMAKE_CURRENT_SOURCE_DIR}/include;${CMAKE_CURRENT_BINARY_DIR}/include
-            ${SYSTEM_INCLUDE_DIRS_ARG}
-            --defines=DONT_CRASH
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-        COMMENT "Generating reflection headers before building test cpp project..."
-        VERBATIM
+include(FetchContent)
+SET(OPAL_BUILD_TESTS OFF)
+SET(OPAL_HARDENING ${OBS_HARDENING})
+set(OPAL_SHARED_LIBS OFF)
+FetchContent_Declare(
+        opal
+        GIT_REPOSITORY https://github.com/praetorian555/opal
+        GIT_TAG main
 )
+FetchContent_MakeAvailable(opal)
 
-add_executable(test-cpp-project test-cpp/src/main.cpp test-cpp/src/secondary.cpp test-cpp/include/types.hpp  test-cpp/third-party/catch2/src/catch_amalgamated.cpp)
-add_dependencies(test-cpp-project warnings options generate_reflection)
-target_compile_features(test-cpp-project PRIVATE cxx_std_20)
-target_compile_definitions(test-cpp-project PRIVATE CATCH_AMALGAMATED_CUSTOM_MAIN DONT_CRASH)
-target_include_directories(test-cpp-project PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/test-cpp/include ${CMAKE_CURRENT_BINARY_DIR}/include)
-target_include_directories(test-cpp-project PRIVATE test-cpp/third-party/catch2/include)
-target_include_directories(test-cpp-project PRIVATE test-cpp/third-party/catch2/include/catch2)
+add_executable(obsidian obsidian/obsidian-main.cpp)
+target_compile_features(obsidian PRIVATE cxx_std_20)
+target_link_libraries(obsidian PRIVATE ${OBS_LLVM_PATH}/lib/libclang.lib opal)
+target_include_directories(obsidian PRIVATE ${OBS_LLVM_PATH}/include)
 
-enable_testing()
-add_test(NAME cpp_test COMMAND test-cpp-project)
+# Copy file before building the executable
+add_custom_command(TARGET obsidian PRE_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy
+        ${OBS_LLVM_PATH}/bin/libclang.dll
+        ${CMAKE_BINARY_DIR}/libclang.dll
+        COMMENT "Copying libclang.dll to output directory"
+)
