Add obs/obs.hpp with needed macros

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ add_executable(obsidian obsidian/obsidian-main.cpp obsidian/types.hpp)
 target_compile_features(obsidian PRIVATE cxx_std_20)
 target_link_libraries(obsidian PRIVATE ${OBS_LLVM_PATH}/lib/libclang.lib opal)
 target_include_directories(obsidian PRIVATE ${OBS_LLVM_PATH}/include)
+target_include_directories(obsidian PUBLIC include)
 
 # Copy file before building the executable
 add_custom_command(TARGET obsidian PRE_BUILD
