Implement reflection generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,13 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(opal)
 
-add_executable(obsidian obsidian/obsidian-main.cpp obsidian/types.hpp)
+add_executable(obsidian
+    obsidian/obsidian-main.cpp
+    obsidian/types.hpp
+    obsidian/templates.hpp
+    obsidian/generator.hpp
+    obsidian/generator.cpp
+)
 target_compile_features(obsidian PRIVATE cxx_std_20)
 target_link_libraries(obsidian PRIVATE ${OBS_LLVM_PATH}/lib/libclang.lib opal)
 target_include_directories(obsidian PRIVATE ${OBS_LLVM_PATH}/include)
