--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -14,6 +14,10 @@ jobs:
       fail-fast: false
       matrix:
         configuration: [Debug, RelWithDebInfo, Release]
+        hardening: [OFF]
+        include:
+          - configuration: Debug
+            hardening: ON
 
     steps:
     - name: Checkout source
@@ -28,6 +32,7 @@ jobs:
         -G "Visual Studio 17 2022"
         -DOBS_LLVM_PATH="C:/Program Files/LLVM"
         -DOBS_BUILD_TESTS=ON
+        -DOBS_HARDENING=${{ matrix.hardening }}
 
     - name: Build
       run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.configuration }}
