In github actions disable Debug check if hardening OFF

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -18,6 +18,9 @@ jobs:
         include:
           - configuration: Debug
             hardening: ON
+        exclude:
+          - configuration: Debug
+            hardening: OFF
 
     steps:
     - name: Checkout source
